Release 1.0.0-20210526-01
commit 3759359c508b67ab5fbc23d328c662625ed7aa18
Author: pci <pci@ejie.eus>
Date:   Tue May 25 10:30:45 2021 +0200

    ContactSocialNetwork > add vimeo

commit 9b66eea7b6717958cdcb8286274f69d92911a8d5
Author: pci <pci@ejie.eus>
Date:   Mon May 24 16:39:59 2021 +0200

    LoadBalancer wip

commit eba0c27ba7bbadc72b145262560624a7e0b6f81e
Author: pci <pci@ejie.eus>
Date:   Mon May 24 16:38:59 2021 +0200

    Cookie utils

commit 9ec1618dae0e63add176e358c394a07bcc6a19bd
Author: pci <pci@ejie.eus>
Date:   Mon May 24 08:06:53 2021 +0200

    LoadBalancer > name refactor

commit f97fd5f1a8c445472c7f72590dd59e2541b0b5e5
Author: pci <pci@ejie.eus>
Date:   Mon May 24 08:05:23 2021 +0200

    HttpProxyServlet > add context support for endpoint server selection

commit d1a4d84305f42e00926e3654ababed88bd69424a
Author: pci <pci@ejie.eus>
Date:   Mon May 24 07:45:23 2021 +0200

    Load balancer > add context to help choosing server

commit 982feb9c2b86cb630a7d116fdad75992cde642ba
Author: pci <pci@ejie.eus>
Date:   Mon May 24 01:48:53 2021 +0200

    HttpProxyServlet

commit fc9337ae12f75a1dc9ef7eda8334fed464c685c5
Author: pci <pci@ejie.eus>
Date:   Mon May 24 01:48:39 2021 +0200

    Load balancer wip

commit 968918915ae664f4944c881cd076921037b547f8
Author: pci <pci@ejie.eus>
Date:   Sun May 23 21:41:25 2021 +0200

    Http load balancer

commit 224a12afd0956ca0c624f9c62a32d84e7b082c6e
Author: pci <pci@ejie.eus>
Date:   Sun May 23 21:41:16 2021 +0200

    Url > code format

commit ff29e3f65d6d273f5f255ab3593213022ee1d3a1
Author: pci <pci@ejie.eus>
Date:   Sun May 23 21:41:02 2021 +0200

    document eclipse install

commit 276bc468ee1070c3d608433fb0958bd29dcfade9
Author: pci <pci@ejie.eus>
Date:   Fri May 21 06:15:02 2021 +0200

    SecurityContext > add valid state

commit 262372a5a3f4cc2ff2ca0f807e4121b6957f76c2
Author: pci <pci@ejie.eus>
Date:   Wed May 19 19:58:50 2021 +0200

    Properties fix

commit be61790c1f700d16ac58273d87775b45934a565a
Author: